--- a/mkdocs-project/docs/css/extra-material-theme.css
+++ b/mkdocs-project/docs/css/extra-material-theme.css
@@ -1,5 +1,16 @@
 /* Custom styles to override MkDocs defaults and enhance theme */
 
+a:link {
+	text-decoration: underline;
+  }
+  a:hover {
+	text-decoration: underline;
+  }
+  
+  a:active {
+	text-decoration: underline;
+  }
+
 /* Unordered list <ul> symbols:
  * - level 2 is hollow circle
  * - level 3 is filled square
@@ -12,6 +23,3 @@ article ul ul {
 article ul ul ul {
 	list-style-type:  square !important;
 }
-a:link {
-	text-decoration: underline;
-  }
